--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ dependencies:
   flutter:
     sdk: flutter
 
-
+  swipedetector: ^1.2.0
   provider: ^2.0.1
   http: ^0.12.0+2
   cupertino_icons: ^0.1.2
@@ -40,6 +40,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - assets/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
