--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   flutter:
     sdk: flutter
 
+
   swipedetector: ^1.2.0
   provider: ^2.0.1
   http: ^0.12.0+2
@@ -41,7 +42,7 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   assets:
-    - assets/
+    - assets/images/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
