--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   google_sign_in: ^4.1.1
   firebase_auth: ^0.15.3
   firebase_database: ^3.1.1
+  simple_animations: ^1.3.4
 
 dev_dependencies:
   flutter_test:
